--- a/index.html
+++ b/index.html
@@ -1,79 +1,77 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
+<head>
+	<title>Todo</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css" />
+	<link rel="stylesheet" href="css/style.css" />
+	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+	
+	<script src="js/todo.js"></script>
+</head>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Todo : jQuery Mobile, HTML5" />
+<body>
+	<!--Home Page-->
+	<div data-role="page" id="home">
+		<div data-role="header">
+			<a href="index.html" data-ajax="false"  id="clear_btn" class="ui-btn ui-btn-b ui-corner-all ui-shadow ui-icon-minus ui-btn-icon-left">Clear All</a>
+			<h1>Todo</h1>
+			<a href="#add" class="ui-btn ui-corner-all ui-shadow ui-icon-plus ui-btn-icon-left">Add</a>
+		</div>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+		<main data-role="content"  class="ui-content" id="content">
+			<ul id="todos" data-role="listview" data-filter="true" data-filter-placeholder="search Todos..." data-inset="true">
+			</ul>
+		</main>
 
-    <title>Todo</title>
-  </head>
+		<div data-role="footer" id="footer">
+			<h4>Todo &copy 2014</h4>
+		</div>
+	</div><!-- /page -->
 
-  <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/htshboy/todo">View on GitHub</a>
+	<!--Add Page-->
+	<div data-role="page" id="add">
+		<div data-role="header">
+			<a href="index.html" id="cancel_btn" data-icon="delete">Cancel</a>
+			<h1>Add A Todo</h1>
+			<a href="index.html" data-icon="check"  data-theme="b" onclick="$('#add_form').submit();">Save</a>
+		</div>
 
-          <h1 id="project_title">Todo</h1>
-          <h2 id="project_tagline">jQuery Mobile, HTML5</h2>
+		<main data-role="content"  class="ui-content" id="content">
+			<form id="add_form">
+				<input type="text" name="todo_name" id="todo_name" placeholder="Add Todo Name">
+				<input type="date" name="todo_date" id="todo_date" >
+			</form>
+		</main>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/htshboy/todo/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/htshboy/todo/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+		<div data-role="footer" id="footer">
+			<h4>Todo &copy 2014</h4>
+		</div>
+	</div><!-- /page -->
+	
+	<!--Edit Page-->
+	<div data-role="page" id="edit">
+		<div data-role="header">
+			<a href="index.html" id="cancel_btn" data-icon="delete">Cancel</a>
+			<h1>Edit Todo</h1>
+			<a href="index.html" data-icon="check"  data-theme="b" onclick="$('#edit_form').submit();">Save</a>
+		</div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+		<main data-role="content"  class="ui-content" id="content">
+			<form id="edit_form">
+				<input type="text" name="todo_name_edit" id="todo_name_edit" placeholder="Add Todo Name">
+				<input type="date" name="todo_date_edit" id="todo_date_edit" >
+				<a href="#" id="delete" data-role="button">Delete</a>
+			</form>
+		</main>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+		<div data-role="footer" id="footer">
+			<h4>Todo &copy 2014</h4>
+		</div>
+	</div><!-- /page -->
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Todo maintained by <a href="https://github.com/htshboy">htshboy</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+</body>
 </html>
+
