--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</main>
 
 		<div data-role="footer" id="footer">
-			<h4>Todo &copy 2014</h4>
+			<h4><a href="https://github.com/htshboy">htshboy</a> maintains <a href="https://github.com/htshboy/todo">todo</a> &copy; 2014</h4>
 		</div>
 	</div><!-- /page -->
 
@@ -47,7 +47,7 @@
 		</main>
 
 		<div data-role="footer" id="footer">
-			<h4>Todo &copy 2014</h4>
+			<h4><a href="https://github.com/htshboy">htshboy</a> maintains <a href="https://github.com/htshboy/todo">todo</a> &copy; 2014</h4>
 		</div>
 	</div><!-- /page -->
 	
@@ -68,7 +68,7 @@
 		</main>
 
 		<div data-role="footer" id="footer">
-			<h4>Todo &copy 2014</h4>
+			<h4><a href="https://github.com/htshboy">htshboy</a> maintains <a href="https://github.com/htshboy/todo">todo</a> &copy; 2014</h4>
 		</div>
 	</div><!-- /page -->
 
